sql/handler.cc
@@ -7186,7 +7186,8 @@ int handler::binlog_log_row(TABLE *table,
     DBUG_RETURN(HA_ERR_RBR_LOGGING_FAILED);
 
   thd->transaction->stmt.modified_non_trans_table=
-    (!row_logging_has_trans && rows_changed > 0);
+    thd->transaction->stmt.modified_non_trans_table ||
+    (!has_transactions_and_rollback() && rows_changed > 0);
 
   error= (*log_func)(thd, table, row_logging_has_trans,
                      before_record, after_record);
